css/adopt.css
body{
    margin: 0;
    font-family: 'Poppins', sans-serif
}

@font-face{
font-family: "TitleFont";
src: url("../assets/fonts/mythology_of_egypt/Mythology\ Of\ Egypt.otf");
}


.logoimg{
    width: 100px;
    display: block;
    margin: 0 auto 15px;
    }

header{
    background-image: url("../assets/img/adoptHeader.png");
    background-size: cover;
    background-repeat: no-repeat;
    height: 50vh;
    padding-top: 29px;
    display: flex;
    flex-direction: column;
}

.navbar{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 7px 75px;
    background-color: rgb(237, 243, 241);
    opacity: 0.7;
    margin-left: 75px;
    margin-right: 75px;
    border-radius: 33px;
}

.navLinks{
    display: flex;
    gap: 30px;
    font-size: 17.5px;
}

.navLinks a{
    text-decoration: none;
    color: rgba(0, 0, 0, 0.608);
}

.adoptMainTitle{
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: "TitleFont", sans-serif;
    font-size: 100px;
    color: #ffffff;
}

.introduction{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #002d68;
    height: 50vh;
}

.introText p,
.introText p{
    margin: 0;
}

.introText{
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    gap: 20px;
}

.yellowHead{
    font-size: 45px;
    color: #e9ad1c;
    font-family: 'Metamorphous', sans-serif
}

.introParagraph{
    color: #ffffff;
    font-size: 20px;
}

.yellowbar{
    background-color: #e9ad1c;
    height: 14vh;
}


.bdImg img{
    margin: 0;
}

.blueDragon{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #ffffff;
    height: 110vh;
    gap: 105px;
}


.Azuron{
    height: 700px;
    width: 540px;
    border-radius: 17px; 
}

.adoptDataBD{
    display: flex;
    flex-direction: column;
    padding-right: 20px;
}

.titleBDtext{
    font-size: 50px; 
    margin: 0;
}

.discountPrice{
    font-size: 28px;
    color: grey;
    margin: 0;
}

.regPrice{
    font-size: 28px;
    color: grey;
    text-decoration: line-through;
    margin: 0;
}

.priceBD{
    display: flex;
    gap: 61px;
}

.yellowstarBD{
    color: #e9ad1c;
    font-size: 30px;
    margin: 0;
}

.paraBDtext{
    font-size: 19px;
    font-weight: 16pt;
    line-height: 1.8;
    margin: 0;
}

.adoptButtonsBD{
    display: flex;
    gap: 35px;
    padding-top: 13px;
    
}

.counterBD{
    border-radius: 11px;
    border-color: #002d68;
    padding: 23px 51px;
    font-size: 18px;
    color: #ffffff;
    background-color: #002d68;
    font-family: 'Poppins', sans-serif
}

.atcBD{
    border-radius: 11px;
    border-color: #15d5f5;
    padding: 15px 95px;
    font-size: 18px;
    color: #ffffff;
    background-color: #15d5f5;
    font-family: 'Poppins', sans-serif
}

.kitsune{
    background-color: #002d68;
    height: 110vh;
}

.griffin{
    background-color: #ffffff;
    height: 110vh;
}

.waterWisp{
    background-color: #002d68;
    height: 110vh;
}

.pegasus{
    background-color: #ffffff;
    height: 110vh;
}

.forestSpirit{
    background-color: #002d68;
    height: 110vh;
}






.info-box{
    width:700px;
    border-top:1px solid #d9d9d9;
    font-size: 17px;

    
    color:gray;
    


    
    padding-top: 38px;
    margin-top: 45px;
    line-height: 2.3;
}

.row{
    display:flex;
    margin: 0;
    
}

.item{
    width:105px;
    margin: 0;
}

.colon{
    width:40px;
    text-align:center;
    margin: 0;
}

.description{
    flex:1;
    margin: 0;
}

